snapshot-tests/tests/snapshots/parser__integer_range_positive.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ integer_range_positive:1:5
  │
1 │ a = 9223372036854775808
  │     ^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow
